--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,4 @@
 name = "tensorcode-worker"
 main = "src/index.ts"
 compatibility_date = "2024-12-01"
+account_id = "afeeea28ef4b58aad33f54322feaab68"
