--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,7 @@
-name = "tensorcode-worker"
+name = "tensorcode-cf-worker-stag"
 main = "src/index.ts"
 compatibility_date = "2024-12-01"
 account_id = "afeeea28ef4b58aad33f54322feaab68"
+
+[vars]
+# CF_TOKEN = "your-secret-token" # Don't commit secrets - use wrangler secret instead
